[package]
name = "curdleproofs_whisk"
version = "0.1.0"
authors = ["dapplion"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
ethereum_ssz = "0.5.0"
ethereum_ssz_derive = "0.5.3"
rand = "0.8.5"
tree_hash = { version = "0.5.2", features = ["arbitrary"] }
tree_hash_derive = "0.5.0"
derivative = "2.1.1"
serde = "1.0.116"
serde_derive = "1.0.116"
ethereum_serde_utils = "0.5.0"
hex = "0.4.2"
arbitrary = { version = "1.0", features = ["derive"], optional = true }
curdleproofs = { git = "https://github.com/asn-d6/curdleproofs.git", rev = "38df4e5dbf9ea84e9e612a4fd675e8278969f81f" }
ark-std = "^0.3.0"

[dev-dependencies]
hex = "0.4.2"
